Broke the top (will fix later) but tidied the pricing table. Possibly took too much information out...

--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -1,5 +1,15 @@
+#whatmain {
+  .row {
+    max-width: 1000px;
+    margin: auto;
+  }
+}
+
 .whatbox {
   text-align: center;
+  margin: auto;
+  padding-left: 30px;
+  padding-right: 30px;
 
   span {
     font-size: 2.5em;
@@ -14,8 +24,6 @@
   p {
     font-size: 13px;
     line-height: 24px;
-    color: $col--dark-grey;
-    font-weight: 600;
   }
 }
 
@@ -98,8 +106,27 @@
 }
 
 .big-central-text {
+  color: $col--bootstrap-black;
   font-size: 1.3em;
   text-align: center;
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+.pricing-card {
+  margin-top: 40px;
+  text-align: center;
+  background-color: white;
+
+  p {
+    color: $col--dark-grey;
+  }
+
+  hr {
+    width: 60%;
+  }
+
+  // .amount {
+  //   color: $col--dark-grey;
+  // }
 }
