--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -1,10 +1,11 @@
-$font--main: "Open Sans", sans-serif;
+$font--main: "Montserrat", sans-serif;
 $font--headings: "Montserrat", sans-serif;
 
 $col--mabel-orange: rgba(255, 102, 0, 1);
+$col--bootstrap-black: rgba(51, 51, 51, 1);
 $col--black: rgba(0, 0, 0, 1);
 $col--dark-grey: rgba(80, 80, 80, 1);
-$col--mid-grey: rgba(120, 120, 120, 1);
+$col--mid-grey: rgba(150, 150, 150, 1);
 $col--light-grey: rgba(200, 200, 200, 1);
 $col--very-light-grey: #f4f4f4;
 $col--white: rgba(255, 255, 255, 1);
